portfolio page was worked on, progess on understanding of bootstrap

--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
-  </head>
-  <body>
-    This is the landing page
+    <!--Bootstrap Core-->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <style></style>
+    <title>Pablo Hernandez | Homepage</title>
+  
+</head>
+
+  <body class="text-center">
+    <div
+      class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"
+    >
+    <header class="masthead mb-auto">
+      <div class="inner">
+        <h3 class="masthead-brand">Pablo Hernandez</h3>
+        <nav class="nav nav-masthead justify-content-center">
+          <a class="nav-link active" href="index.html">Home</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <a class="nav-link" href="contact.html">Contact</a>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
