--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <!--Bootstrap Core-->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <style></style>
+    <title>Pablo Hernandez | Portfolio</title>
   </head>
-  <body>
-    This is the portfolio page.
+
+  <body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column" />
+
+    <header
+      class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar" />
+    
+      <div class="container"></div>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <!--My Name Goes Here-->
+          <span class="navbar-brand">Pablo Hernandez</span>
+
+          <!--Navigation Links-->
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
