--- a/contact.html
+++ b/contact.html
@@ -12,22 +12,30 @@
     />
     <style></style>
     <title>Pablo Hernandez | Contact</title>
-  
-</head>
+  </head>
 
-  <body class="text-center">
-    <div
-      class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"
-    >
-    <header class="masthead mb-auto">
-      <div class="inner">
-        <h3 class="masthead-brand">Pablo Hernandez</h3>
-        <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link" href="index.html">Home</a>
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-          <a class="nav-link active" href="contact.html">Contact</a>
-        </nav>
-      </div>
+  <body>
+    <header class="container">
+      <nav
+        class="navbar navbar-expand-sm bg-dark navbar-dark"
+        style="margin: 24px 0;"
+      >
+        <!--My Name Goes Here-->
+        <span class="navbar-brand mb-0 h1">Pablo Hernandez</span>
+
+        <!--Navigation Links-->
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
   </body>
 </html>
