--- a/portfolio.html
+++ b/portfolio.html
@@ -14,31 +14,28 @@
     <title>Pablo Hernandez | Portfolio</title>
   </head>
 
-  <body class="text-center">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column" />
+  <body>
+    <header class="container">
+      <nav
+        class="navbar navbar-expand-sm bg-dark navbar-dark"
+        style="margin: 24px 0;"
+      >
+        <!--My Name Goes Here-->
+        <span class="navbar-brand mb-0 h1">Pablo Hernandez</span>
 
-    <header
-      class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar" />
-    
-      <div class="container"></div>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-          <!--My Name Goes Here-->
-          <span class="navbar-brand">Pablo Hernandez</span>
-
-          <!--Navigation Links-->
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+        <!--Navigation Links-->
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
   </body>
 </html>
