--- a/portfolio.html
+++ b/portfolio.html
@@ -2,40 +2,61 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--Bootstrap Core-->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <!--Bootstrap CSS-->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <style></style>
+    <link href="css/style.css" rel="stylesheet" />
     <title>Pablo Hernandez | Portfolio</title>
   </head>
-
   <body>
-    <header class="container">
-      <nav
-        class="navbar navbar-expand-sm bg-dark navbar-dark"
-        style="margin: 24px 0;"
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Pablo Hernandez</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navBarContent"
       >
-        <!--My Name Goes Here-->
-        <span class="navbar-brand mb-0 h1">Pablo Hernandez</span>
-
-        <!--Navigation Links-->
-        <ul class="navbar-nav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navBarContent">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">About</a>
           </li>
-          <li class="nav-item">
+          <li class="navbar-item">
             <a class="nav-link active" href="portfolio.html">Portfolio</a>
           </li>
-          <li class="nav-item">
+          <li class="navbar-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
-      </nav>
-    </header>
+      </div>
+    </nav>
+
+    <!-- JavaScript -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
