--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,20 @@
         </ul>
       </div>
     </nav>
+    <div class="container col-md-6">
+      <div class="form-group">
+        <label>Name</label>
+        <input type="text" class="form-control" />
+      </div>
+      <div class="form-group">
+        <label>Email</label>
+        <input type="text" class="form-control" />
+      </div>
+      <div class="form-group">
+        <label>Message</label>
+        <textarea class="form-control" rows="5"></textarea>
+      </div>
+    </div>
 
     <!-- JavaScript -->
     <script
