index page missing main content, also need to work on portfolio page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Pablo Hernandez | About</title>
   </head>
   <body>
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Pablo Hernandez</a>
       <button
@@ -41,6 +42,8 @@
         </ul>
       </div>
     </nav>
+
+    <!-- About Me/Main Content -->
 
     <!-- JavaScript -->
     <script
