Cleaned up buttons and contact card

--- a/contact.html
+++ b/contact.html
@@ -87,12 +87,17 @@
               </div>
             </div>
             <button type="submit" class="btn btn-secondary btn-lg float-right">
-              Send Message
+              Send
             </button>
           </fieldset>
         </form>
       </div>
     </div>
+
+    <!-- Footer -->
+    <footer>
+      ©2020 Pablo Hernandez
+    </footer>
 
     <!-- JavaScript -->
     <script
