--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
     </nav>
 
     <!-- About Me/Main Content -->
-
+    <!-- Footer -->
+    <footer>
+      ©2020 Pablo Hernandez
+    </footer>
     <!-- JavaScript -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
