--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,11 @@
       </div>
     </nav>
 
+    <!-- Footer -->
+    <footer>
+      ©2020 Pablo Hernandez
+    </footer>
+
     <!-- JavaScript -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
