added jumbotron to index page

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     </nav>
 
     <!-- Form User Info -->
-    <div class="card card-outline-secondary">
+    <div class="card card-outline-secondary" style="max-width: 40rem;">
       <div class="card-header">
         <h3 class="mb-0">Contact</h3>
       </div>
