changed color scheme in style.css

--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
     </nav>
 
     <!-- About Me/Main Content -->
+
     <div class="container bg-dark py-5 text-light">
       <div class="jumbotron">
-        <h1>Welcome to my site</h1>
+        <h1>Welcome to my site!</h1>
         <hr class="my-4" />
         <p>
-          My name is Pablo and this is where I keep my collection of my currents
-          works. Thanks for looking!
+          My name is Pablo Hernandez and this is where I keep my collection of
+          my currents works. Thanks for looking!
         </p>
       </div>
     </div>
