--- a/contact.html
+++ b/contact.html
@@ -43,54 +43,59 @@
     </nav>
 
     <!-- Form User Info -->
-    <div class="card card-outline-secondary" style="max-width: 40rem;">
-      <div class="card-header">
-        <h3 class="mb-0">Contact</h3>
-      </div>
-      <div class="card-body">
-        <form class="form" role="form" autocomplete="off">
-          <fieldset>
-            <label for="name2" class="mb-0">Name</label>
-            <div class="row mb-1">
-              <div class="col-lg-12">
-                <input
-                  type="text"
-                  name="name2"
-                  id="name2"
-                  class="form-control"
-                  required=""
-                />
+    <div class="container">
+      <div class="card card-outline-secondary" style="max-width: 40rem;">
+        <div class="card-header">
+          <h2 class="mb-0">Contact</h2>
+        </div>
+        <div class="card-body">
+          <form class="form" role="form" autocomplete="off">
+            <fieldset>
+              <label for="name2" class="mb-0">Name</label>
+              <div class="row mb-1">
+                <div class="col-lg-12">
+                  <input
+                    type="text"
+                    name="name2"
+                    id="name2"
+                    class="form-control"
+                    required=""
+                  />
+                </div>
               </div>
-            </div>
-            <label for="email2" class="mb-0">Email</label>
-            <div class="row mb-1">
-              <div class="col-lg-12">
-                <input
-                  type="text"
-                  name="email2"
-                  id="email2"
-                  class="form-control"
-                  required=""
-                />
+              <label for="email2" class="mb-0">Email</label>
+              <div class="row mb-1">
+                <div class="col-lg-12">
+                  <input
+                    type="text"
+                    name="email2"
+                    id="email2"
+                    class="form-control"
+                    required=""
+                  />
+                </div>
               </div>
-            </div>
-            <label for="message2" class="mb-0">Message</label>
-            <div class="row mb-1">
-              <div class="col-lg-12">
-                <textarea
-                  rows="6"
-                  name="message2"
-                  id="message2"
-                  class="form-control"
-                  required=""
-                ></textarea>
+              <label for="message2" class="mb-0">Message</label>
+              <div class="row mb-1">
+                <div class="col-lg-12">
+                  <textarea
+                    rows="6"
+                    name="message2"
+                    id="message2"
+                    class="form-control"
+                    required=""
+                  ></textarea>
+                </div>
               </div>
-            </div>
-            <button type="submit" class="btn btn-secondary btn-lg float-right">
-              Send
-            </button>
-          </fieldset>
-        </form>
+              <button
+                type="submit"
+                class="btn btn-secondary btn-lg float-right"
+              >
+                Send
+              </button>
+            </fieldset>
+          </form>
+        </div>
       </div>
     </div>
 
