--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
           <li class="navbar-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
-          <li class="navbar-item active">
-            <a class="nav-link" href="contact.html">Contact</a>
+          <li class="navbar-item">
+            <a class="nav-link active" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
