--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navBarContent">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">About</a>
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">About</a>
           </li>
           <li class="navbar-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
