--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,13 @@
       </div>
     </nav>
 
+    <!-- Portfolio Gallery -->
+    <div class="container">
+      <h1 class="font-weight-light text-center text-lg-left mt-4 mb-o">
+        Portfolio Gallery
+      </h1>
+    </div>
+
     <!-- Footer -->
     <footer>
       ©2020 Pablo Hernandez
