added gallery placeholders to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,9 +44,44 @@
 
     <!-- Portfolio Gallery -->
     <div class="container">
-      <h1 class="font-weight-light text-center text-lg-left mt-4 mb-o">
-        Portfolio Gallery
+      <h1 class="text-center text-lg-left mt-4 mb-0">
+        Projects
       </h1>
+      <hr class="mt-2 mb-5" />
+      <div class="row text-center text-lg left">
+          
+        <div class="col-lg-3 col-md-4 col-6">
+              <a href="#" class="d-block mb-4 h-100">
+                  <img class="img-fluid img-thumbnail" src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="placeholder">
+              </a>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6">
+              <a href="#" class="d-block mb-4 h-100">
+                  <img class="img-fluid img-thumbnail" src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="placeholder">
+              </a>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6">
+              <a href="#" class="d-block mb-4 h-100">
+                  <img class="img-fluid img-thumbnail" src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="placeholder">
+                </a>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6">
+              <a href="#" class="d-block mb-4 h-100">
+                  <img class="img-fluid img-thumbnail" src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="placeholder">
+              </a>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6">
+              <a href="#" class="d-block mb-4 h-100">
+                  <img class="img-fluid img-thumbnail" src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="placeholder">
+                </a>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6">
+              <a href="#" class="d-block mb-4 h-100">
+                  <img class="img-fluid img-thumbnail" src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="placeholder">
+              </a>
+          </div>
+
+
     </div>
 
     <!-- Footer -->
