added semantic tags to index, portfolio and contact pages

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <title>Pablo Hernandez | Contact</title>
   </head>
   <body>
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Pablo Hernandez</a>
       <button
@@ -43,7 +44,7 @@
     </nav>
 
     <!-- Form User Info -->
-    <div class="container">
+    <section class="container">
       <div class="card card-outline-secondary" style="max-width: 40rem;">
         <div class="card-header">
           <h2 class="mb-0">Contact</h2>
@@ -97,7 +98,7 @@
           </form>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- Footer -->
     <footer>
