--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- About Me/Main Content -->
 
-    <div class="container bg-dark py-5 text-light">
+    <main class="container bg-dark py-5 text-light">
       <div class="jumbotron">
         <h1>Welcome to my site!</h1>
         <hr class="my-4" />
@@ -54,12 +54,13 @@
           my currents works. Thanks for looking!
         </p>
       </div>
-    </div>
+    </main
 
     <!-- Footer -->
     <footer>
       ©2020 Pablo Hernandez
     </footer>
+    
     <!-- JavaScript -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
