--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,8 @@
     <title>Pablo Hernandez | Portfolio</title>
   </head>
   <body>
+    
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Pablo Hernandez</a>
       <button
@@ -43,7 +45,7 @@
     </nav>
 
     <!-- Portfolio Gallery -->
-    <div class="container">
+    <section class="container">
       <h1 class="text-center text-lg-left mt-4 mb-0">
         Projects
       </h1>
@@ -80,9 +82,7 @@
                   <img class="img-fluid img-thumbnail" src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="placeholder">
               </a>
           </div>
-
-
-    </div>
+    </section>
 
     <!-- Footer -->
     <footer>
