organized style.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
+
     <!--Bootstrap CSS-->
     <link
       rel="stylesheet"
@@ -54,13 +55,13 @@
           my currents works. Thanks for looking!
         </p>
       </div>
-    </main
+    </main>
 
     <!-- Footer -->
     <footer>
       ©2020 Pablo Hernandez
     </footer>
-    
+
     <!-- JavaScript -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
