--- a/index2.html
+++ b/index2.html
@@ -14,23 +14,36 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!-- <link href="css/style.css" rel="stylesheet" /> -->
+    <link href="css/style2.css" rel="stylesheet" />
   </head>
 
   <body>
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4">Fluid Jumbotron</h1>
-        <p class="lead">This is a paragraph about myself</p>
-      </div>
-    </div>
+    <header></header>
 
     <!-- Portfolio Section -->
     <section class="container">
       <h2 class="text-left text-lg-left mt-4 mb-0">Current Works</h2>
       <hr class="mt-2 mb-5" />
       <div class="row text-center text-lg left">
-        <div class="col-lg-3 col-md-4 col-6">
+        <div class="col-lg-12 col-12">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80"
+              alt="placeholder"
+            />
+          </a>
+        </div>
+        <div class="col-lg-12 col-12">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80"
+              alt="placeholder"
+            />
+          </a>
+        </div>
+        <div class="col-lg-12 col-12">
           <a href="#" class="d-block mb-4 h-100">
             <img
               class="img-fluid img-thumbnail"
@@ -43,15 +56,15 @@
     </section>
 
     <!-- Contact Card  Section -->
-    <section class="container">
-      <div class="card card-outline-secondary" style="max-width: 40rem;">
+    <section class="container d-block justify-content-center">
+      <div class="card card-outline-secondary">
         <div class="card-header">
           <h2 class="mb-0">Contact</h2>
         </div>
         <div class="card-body">
           <form class="form" role="form" autocomplete="off">
             <fieldset>
-              <label for="name2" class="mb-0">Name</label>
+              <label for="name" class="mb-0">Name</label>
               <div class="row mb-1">
                 <div class="col-lg-12">
                   <input
@@ -63,7 +76,7 @@
                   />
                 </div>
               </div>
-              <label for="email2" class="mb-0">Email</label>
+              <label for="email" class="mb-0">Email</label>
               <div class="row mb-1">
                 <div class="col-lg-12">
                   <input
@@ -112,15 +125,15 @@
             <div class="col-md-6 col-lg-7 text-center text-md-right">
               <!-- Github -->
               <a class="gh-ic">
-                <i class="fa fa-github-square mr-4"> </i>
+                <i class="fa fa-github-square mr-4 fa-2x"> </i>
               </a>
               <!--Linkedin -->
               <a class="li-ic">
-                <i class="fa fa-linkedin-square white mr-4"> </i>
+                <i class="fa fa-linkedin-square mr-4 fa-2x"> </i>
               </a>
               <!--Instagram-->
               <a class="ins-ic">
-                <i class="fa fa-instagram mr-4"></i>
+                <i class="fa fa-instagram mr-4 fa-2x"></i>
               </a>
             </div>
           </div>
@@ -149,8 +162,8 @@
       </div>
 
       <!-- Copyright -->
-      <div class="footer-copyright text-center text-black-50 py-3">
-        © 2020 Copyright
+      <div class="footer-copyright text-center text-white-50 py-5">
+        © 2020 Pablo Hernandez, All Rights Reserved
       </div>
       <!-- Copyright -->
     </footer>
