--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,8 @@
   </head>
 
   <body>
+    <nav></nav>
+
     <header></header>
 
     <!-- Portfolio Section -->
@@ -104,7 +106,7 @@
                 type="submit"
                 class="btn btn-secondary btn-lg float-right"
               >
-                Send
+                <i class="fa fa-paper-plane mr-2 fa-3"></i>Send
               </button>
             </fieldset>
           </form>
