--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
         <div class="col-lg-12 col-12">
           <a href="#" class="d-block mb-4 h-100">
             <img
-              class="img-fluid img-thumbnail"
+              class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
               src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80"
               alt="placeholder"
             />
@@ -39,7 +39,7 @@
         <div class="col-lg-12 col-12">
           <a href="#" class="d-block mb-4 h-100">
             <img
-              class="img-fluid img-thumbnail"
+              class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
               src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80"
               alt="placeholder"
             />
@@ -48,7 +48,7 @@
         <div class="col-lg-12 col-12">
           <a href="#" class="d-block mb-4 h-100">
             <img
-              class="img-fluid img-thumbnail"
+              class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
               src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80"
               alt="placeholder"
             />
@@ -59,7 +59,7 @@
 
     <!-- Contact Card  Section -->
     <section class="container d-block justify-content-center">
-      <div class="card card-outline-secondary">
+      <div class="card card-outline-secondary shadow p-1 mb-5 bg-white rounded">
         <div class="card-header">
           <h2 class="mb-0">Contact</h2>
         </div>
