--- a/index2.html
+++ b/index2.html
@@ -58,7 +58,7 @@
     </section>
 
     <!-- Contact Card  Section -->
-    <section class="container d-block justify-content-center">
+    <section class="contact container d-block justify-content-center">
       <div class="card card-outline-secondary shadow p-1 mb-5 bg-white rounded">
         <div class="card-header">
           <h2 class="mb-0">Contact</h2>
@@ -126,15 +126,15 @@
             </div>
             <div class="col-md-6 col-lg-7 text-center text-md-right">
               <!-- Github -->
-              <a class="gh-ic">
+              <a class="gh-ic" href="https://github.com/medszilla26">
                 <i class="fa fa-github-square mr-4 fa-2x"> </i>
               </a>
               <!--Linkedin -->
-              <a class="li-ic">
+              <a class="li-ic" href="https://www.linkedin.com/in/pablohdzjr">
                 <i class="fa fa-linkedin-square mr-4 fa-2x"> </i>
               </a>
               <!--Instagram-->
-              <a class="ins-ic">
+              <a class="ins-ic" href="http://www.instagram.com/medszilla26">
                 <i class="fa fa-instagram mr-4 fa-2x"></i>
               </a>
             </div>
