--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pablo Hernandez | Portfolio</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -18,16 +18,42 @@
   </head>
 
   <body>
-    <nav></nav>
-
-    <header></header>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#">Pablo Hernandez</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navBarContent"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navBarContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">About</a>
+            </li>
+            <li class="navbar-item">
+              <a class="nav-link active" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="navbar-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
     <!-- Portfolio Section -->
     <section class="container">
-      <h2 class="text-left text-lg-left mt-4 mb-0">Current Works</h2>
+      <h2 class="text-left text-lg-left mt-4 mb-0" id="portfolio">
+        Current Works
+      </h2>
       <hr class="mt-2 mb-5" />
       <div class="row text-center text-lg left">
         <div class="col-lg-12 col-12">
+          <h3>Project Title</h3>
           <a href="#" class="d-block mb-4 h-100">
             <img
               class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
@@ -37,6 +63,7 @@
           </a>
         </div>
         <div class="col-lg-12 col-12">
+          <h3>Project Title</h3>
           <a href="#" class="d-block mb-4 h-100">
             <img
               class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
@@ -46,6 +73,7 @@
           </a>
         </div>
         <div class="col-lg-12 col-12">
+          <h3>Project Title</h3>
           <a href="#" class="d-block mb-4 h-100">
             <img
               class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
@@ -59,7 +87,10 @@
 
     <!-- Contact Card  Section -->
     <section class="contact container d-block justify-content-center">
-      <div class="card card-outline-secondary shadow p-1 mb-5 bg-white rounded">
+      <div
+        class="card card-outline-secondary shadow p-1 mb-5 bg-white rounded"
+        id="contact"
+      >
         <div class="card-header">
           <h2 class="mb-0">Contact</h2>
         </div>
@@ -102,6 +133,8 @@
                   ></textarea>
                 </div>
               </div>
+
+              <!-- Submit Button -->
               <button
                 type="submit"
                 class="btn btn-secondary btn-lg float-right"
@@ -114,7 +147,7 @@
       </div>
     </section>
 
-    <!-- Footer -->
+    <!-- Footer Section -->
     <footer class="page-footer font-small blue-grey lighten-5">
       <div style="background-color: #21d192;">
         <div class="container">
@@ -126,15 +159,27 @@
             </div>
             <div class="col-md-6 col-lg-7 text-center text-md-right">
               <!-- Github -->
-              <a class="gh-ic" href="https://github.com/medszilla26">
+              <a
+                class="gh-ic"
+                href="https://github.com/medszilla26"
+                target="blank"
+              >
                 <i class="fa fa-github-square mr-4 fa-2x"> </i>
               </a>
               <!--Linkedin -->
-              <a class="li-ic" href="https://www.linkedin.com/in/pablohdzjr">
+              <a
+                class="li-ic"
+                href="https://www.linkedin.com/in/pablohdzjr"
+                target="blank"
+              >
                 <i class="fa fa-linkedin-square mr-4 fa-2x"> </i>
               </a>
               <!--Instagram-->
-              <a class="ins-ic" href="http://www.instagram.com/medszilla26">
+              <a
+                class="ins-ic"
+                href="http://www.instagram.com/medszilla26"
+                target="blank"
+              >
                 <i class="fa fa-instagram mr-4 fa-2x"></i>
               </a>
             </div>
@@ -143,24 +188,28 @@
       </div>
 
       <!-- Footer Links -->
-      <div class="container text-left text-md-left mt-5">
-        <!-- Grid row -->
+      <div class="container text-center text-md-left mt-5">
         <div class="row mt-3 dark-grey-text">
-          <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-            <!-- Links -->
             <h6 class="text-uppercase font-weight-bold">reach me</h6>
             <hr
               class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto"
               style="width: 60px;"
             />
-
-            <p><i class="fa fa-envelope mr-3"></i>pablohdzjr@gmail.com</p>
-            <p><i class="fa fa-phone mr-3"></i>(832) 904-1663</p>
+            <!-- Email Address -->
+            <p>
+              <a class="mailto" href="mailto:pablohdzjr@gmail.com"
+                ><i class="fa fa-envelope mr-3"></i>pablohdzjr@gmail.com</a
+              >
+            </p>
+            <!-- Phone Number -->
+            <p>
+              <a class="tel" href="tel:832-904-1663"
+                ><i class="fa fa-phone mr-3"></i>(832) 904-1663</a
+              >
+            </p>
           </div>
-          <!-- Grid column -->
         </div>
-        <!-- Grid row -->
       </div>
 
       <!-- Copyright -->
@@ -169,7 +218,6 @@
       </div>
       <!-- Copyright -->
     </footer>
-    <!-- Footer -->
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
