--- a/index2.html
+++ b/index2.html
@@ -18,36 +18,49 @@
   </head>
 
   <body>
-    <header>
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Pablo Hernandez</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navBarContent"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navBarContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">About</a>
-            </li>
-            <li class="navbar-item">
-              <a class="nav-link active" href="#portfolio">Portfolio</a>
-            </li>
-            <li class="navbar-item">
-              <a class="nav-link" href="#contact">Contact</a>
-            </li>
-          </ul>
+    <!-- Navigation Bar Section -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">Pablo Hernandez</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navBarContent"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navBarContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="navbar-item">
+            <a class="nav-link" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="navbar-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- About Me Section -->
+    <section class="container" id="about">
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-6">
+          <p>
+            Hi there, my name is Pablo Hernandez. Currently I am attending a
+          </p>
         </div>
-      </nav>
-    </header>
+        <div class="col-12 col-md-6 col-lg-6">
+          <img style="width: 200px; height: 200px;" />
+        </div>
+      </div>
+    </section>
 
     <!-- Portfolio Section -->
-    <section class="container">
-      <h2 class="text-left text-lg-left mt-4 mb-0" id="portfolio">
+    <section class="container" id="portfolio">
+      <h2 class="text-left text-lg-left mt-4 mb-0">
         Current Works
       </h2>
       <hr class="mt-2 mb-5" />
@@ -86,11 +99,11 @@
     </section>
 
     <!-- Contact Card  Section -->
-    <section class="contact container d-block justify-content-center">
-      <div
-        class="card card-outline-secondary shadow p-1 mb-5 bg-white rounded"
-        id="contact"
-      >
+    <section
+      class="contact container d-block justify-content-center"
+      id="contact"
+    >
+      <div class="card card-outline-secondary shadow p-1 mb-5 bg-white rounded">
         <div class="card-header">
           <h2 class="mb-0">Contact</h2>
         </div>
@@ -219,9 +232,20 @@
       <!-- Copyright -->
     </footer>
 
+    <!-- JavaScript -->
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
   </body>
