--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <body>
     <!-- Navigation Bar Section -->
+
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="#">Pablo Hernandez</a>
       <button
@@ -47,12 +48,12 @@
     <!-- About Me Section -->
     <section class="container" id="about">
       <div class="row">
-        <div class="col-12 col-md-6 col-lg-6">
+        <div class="col-sm-12 col-md-6 col-lg-6">
           <p>
             Hi there, my name is Pablo Hernandez. Currently I am attending a
           </p>
         </div>
-        <div class="col-12 col-md-6 col-lg-6">
+        <div class="col-sm-12 col-md-6 col-lg-6 ml-3">
           <img style="width: 200px; height: 200px;" />
         </div>
       </div>
