--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <!-- Navigation Bar Section -->
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Pablo Hernandez</a>
+      <a class="navbar-brand" href="#">
+        <img src="assets/pablo-logo.png" style="width: 100px; height: 100px;" />
+      </a>
       <button
         class="navbar-toggler"
         type="button"
