--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pablo Hernandez | Portfolio</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -22,7 +23,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="#">
-        <img src="assets/pablo-logo.png" style="width: 100px; height: 100px;" />
+        <img src="assets/pablo-logo.png" class="logo" />Pablo Hernandez
       </a>
       <button
         class="navbar-toggler"
