--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="#">
-        <img src="assets/pablo-logo.png" class="logo" />Pablo Hernandez
+        <img src="assets/pablo-logo.png" class="logo" /> Pablo Hernandez
       </a>
       <button
         class="navbar-toggler"
@@ -166,7 +166,7 @@
 
     <!-- Footer Section -->
     <footer class="page-footer font-small blue-grey lighten-5">
-      <div style="background-color: #21d192;">
+      <div style="background-color: #80c68c;">
         <div class="container">
           <div class="row py-4 d-flex align-items-center">
             <div
@@ -230,7 +230,7 @@
       </div>
 
       <!-- Copyright -->
-      <div class="footer-copyright text-center text-white-50 py-5">
+      <div class="footer-copyright text-center text-black-50 py-5">
         © 2020 Pablo Hernandez, All Rights Reserved
       </div>
       <!-- Copyright -->
