--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -31,7 +36,7 @@
         data-toggle="collapse"
         data-target="#navBarContent"
       >
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"> </span>
       </button>
       <div class="collapse navbar-collapse" id="navBarContent">
         <ul class="navbar-nav ml-auto">
@@ -53,7 +58,13 @@
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-6">
           <p>
-            Hi there, my name is Pablo Hernandez. Currently I am attending a
+            My name is Pablo Hernandez, I am currently attending the UT Austin
+            Coding Bootcamp program. I enjoy the challenges it brings and am
+            always excited for the new
+          </p>
+          <p>
+            I am currently employed as a TSA Officer, which I've been with for
+            over 8 years.
           </p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6 ml-3">
@@ -70,32 +81,44 @@
       <hr class="mt-2 mb-5" />
       <div class="row text-center text-lg left">
         <div class="col-lg-12 col-12">
-          <h3>Project Title</h3>
-          <a href="#" class="d-block mb-4 h-100">
+          <h3>Password Generator</h3>
+          <a
+            href="https://medszilla26.github.io/password-generator/"
+            class="d-block mb-4 h-100"
+            target="blank"
+          >
             <img
               class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
-              src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80"
-              alt="placeholder"
+              src="assets/PasswordGenerator.png"
+              alt="screengrab of Password Generator assignment"
             />
           </a>
         </div>
         <div class="col-lg-12 col-12">
-          <h3>Project Title</h3>
-          <a href="#" class="d-block mb-4 h-100">
+          <h3>Code Quiz</h3>
+          <a
+            href="https://medszilla26.github.io/timed-code-quiz/"
+            class="d-block mb-4 h-100"
+            target="blank"
+          >
             <img
               class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
-              src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80"
-              alt="placeholder"
+              src="assets/CodeQuiz.png"
+              alt="screengrab of Code Quiz assignment"
             />
           </a>
         </div>
         <div class="col-lg-12 col-12">
-          <h3>Project Title</h3>
-          <a href="#" class="d-block mb-4 h-100">
+          <h3>Brewery Finder</h3>
+          <a
+            href="https://brandonejenkins.github.io/Beer-Finder/"
+            class="d-block mb-4 h-100"
+            target="blank"
+          >
             <img
               class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
-              src="https://images.unsplash.com/photo-1559311648-addd6af95dd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80"
-              alt="placeholder"
+              src="assets/BrewFinder.png"
+              alt="screengrab of Brewery Finder group project"
             />
           </a>
         </div>
