changed fonts, card divider color

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- About Me Section -->
     <section class="container" id="about">
       <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-6">
+        <div class="col-sm-12 col-md-6 col-lg-6 about">
           <p>
             My name is Pablo Hernandez, I am currently attending the UT Austin
             Coding Bootcamp program. I enjoy the challenges it brings and am
@@ -75,8 +75,8 @@
 
     <!-- Portfolio Section -->
     <section class="container" id="portfolio">
-      <h2 class="text-left text-lg-left mt-4 mb-0">
-        Current Works
+      <h2 class="text-center text-lg-left mt-4 mb-0">
+        Portfolio
       </h2>
       <hr class="mt-2 mb-5" />
       <div class="row text-center text-lg left">
@@ -123,6 +123,7 @@
           </a>
         </div>
       </div>
+      <hr class="mt-2 mb-5" />
     </section>
 
     <!-- Contact Card  Section -->
@@ -132,7 +133,7 @@
     >
       <div class="card card-outline-secondary shadow p-1 mb-5 bg-white rounded">
         <div class="card-header">
-          <h2 class="mb-0">Contact</h2>
+          <h2 class="text-center mb-0">Contact</h2>
         </div>
         <div class="card-body">
           <form class="form" role="form" autocomplete="off">
