added github and live links to projects

--- a/index.html
+++ b/index.html
@@ -86,44 +86,68 @@
         <div class="col-lg-12 col-12">
           <h4>Password Generator</h4>
           <a
+            class="wrld-ic"
             href="https://medszilla26.github.io/password-generator/"
-            class="d-block mb-4 h-100"
             target="blank"
           >
-            <img
-              class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
-              src="assets/PasswordGenerator.png"
-              alt="screengrab of Password Generator assignment"
-            />
+            <i class="fa fa-window-maximize mr-4 fa-2x"> </i>
           </a>
+          <a
+            class="gh-ic"
+            href="https://github.com/medszilla26/password-generator"
+            target="blank"
+          >
+            <i class="fa fa-github-alt mr-4 fa-2x"> </i>
+          </a>
+          <img
+            class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
+            src="assets/PasswordGenerator.png"
+            alt="screengrab of Password Generator assignment"
+          />
         </div>
         <div class="col-lg-12 col-12">
           <h4>Code Quiz</h4>
           <a
-            href="https://medszilla26.github.io/timed-code-quiz/"
-            class="d-block mb-4 h-100"
+            class="wrld-ic"
+            href="https://github.com/medszilla26/timed-code-quiz"
             target="blank"
           >
-            <img
-              class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
-              src="assets/CodeQuiz.png"
-              alt="screengrab of Code Quiz assignment"
-            />
+            <i class="fa fa-window-maximize mr-4 fa-2x"> </i>
           </a>
+          <a
+            class="gh-ic"
+            href="https://medszilla26.github.io/timed-code-quiz/"
+            target="blank"
+          >
+            <i class="fa fa-github-alt mr-4 fa-2x"> </i>
+          </a>
+          <img
+            class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
+            src="assets/CodeQuiz.png"
+            alt="screengrab of Code Quiz assignment"
+          />
         </div>
         <div class="col-lg-12 col-12">
           <h4>Brewery Finder</h4>
           <a
+            class="wrld-ic"
             href="https://brandonejenkins.github.io/Beer-Finder/"
-            class="d-block mb-4 h-100"
             target="blank"
           >
-            <img
-              class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
-              src="assets/BrewFinder.png"
-              alt="screengrab of Brewery Finder group project"
-            />
+            <i class="fa fa-window-maximize mr-4 fa-2x"> </i>
           </a>
+          <a
+            class="gh-ic"
+            href="https://github.com/BrandonEJenkins/Beer-Finder/tree/pablo"
+            target="blank"
+          >
+            <i class="fa fa-github-alt mr-4 fa-2x"> </i>
+          </a>
+          <img
+            class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
+            src="assets/BrewFinder.png"
+            alt="screengrab of Brewery Finder group project"
+          />
         </div>
       </div>
       <hr class="mt-2 mb-5" />
