--- a/index.html
+++ b/index.html
@@ -56,22 +56,24 @@
     <!-- About Me Section -->
     <section class="container" id="about">
       <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-6 about">
-          <p>
-            My name is Pablo Hernandez, I am currently attending the UT Austin
-            Coding Bootcamp program. I enjoy the challenges it brings and am
-            always excited for the new
-          </p>
-          <p>
-            I am currently employed as a TSA Officer, which I've been with for
-            over 8 years.
-          </p>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-6 ml-3">
+        <div class="col-sm-12 col-md-6 col-lg-6">
           <img
             class="img-thumbnail shadow bg-white rounded"
             src="assets/headshot.jpg"
           />
+        </div>
+
+        <div class="col-sm-12 col-md-6 col-lg-6 about">
+          <p>
+            My name is Pablo Hernandez, I am currently attending the UT Austin
+            Coding Bootcamp program. I enjoy the challenges it brings and am
+            always excited to learn new things.
+          </p>
+          <p>
+            Currently I am a TSA officer, have been for 9 years now. Besides
+            doing officer floor work I have also coached and trained new
+            officers and worked in the logistics department.
+          </p>
         </div>
       </div>
     </section>
