added burger app

--- a/index.html
+++ b/index.html
@@ -151,6 +151,28 @@
             alt="screengrab of Brewery Finder group project"
           />
         </div>
+        <div class="col-lg-12 col-12">
+          <h4>Eat-Da-Burger</h4>
+          <a
+            class="wrld-ic"
+            href="https://fierce-eyrie-21522.herokuapp.com/"
+            target="blank"
+          >
+            <i class="fa fa-window-maximize mr-4 fa-2x"> </i>
+          </a>
+          <a
+            class="gh-ic"
+            href="https://github.com/medszilla26/eat-da-burger"
+            target="blank"
+          >
+            <i class="fa fa-github-alt mr-4 fa-2x"> </i>
+          </a>
+          <img
+            class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
+            src="assets/BurgerApp.png"
+            alt="screengrab of Brewery Finder group project"
+          />
+        </div>
       </div>
       <hr class="mt-2 mb-5" />
     </section>
