changed alt tag

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <img
             class="img-fluid img-thumbnail shadow p-1 mb-5 bg-white rounded"
             src="assets/BurgerApp.png"
-            alt="screengrab of Brewery Finder group project"
+            alt="screengrab of Burger App assignment"
           />
         </div>
       </div>
