redoing portfolio gallery

--- a/indexv2.html
+++ b/indexv2.html
@@ -24,12 +24,47 @@
   </head>
 
   <body>
+    <!-- Navigation Bar Section -->
+
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">
+        <img src="assets/pablo-logo.png" class="logo" /> Pablo Hernandez
+      </a>
+    </nav>
+
+    <!-- Portfolio Section -->
     <section class="gallery-block cards-gallery">
       <div class="container">
         <div class="heading">
           <h2>Portfolio</h2>
         </div>
-      </div>
+        <div class="row">
+          <div class="col-md-6 col-lg-4">
+            <div class="card border-0 shadow p-1">
+              <img
+                src="assets/PasswordGenerator.png"
+                alt="screengrab of Password Generator assignment"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                  <h6 class="card-title">Password Generator</h6>
+                  <p>This is a description of the project.</p>
+              </div>
+            </div>
+          </div>
+        <div class="col-md-6 col-lg-4">
+            <div class="card border-0 shadow p-1">
+              <img
+                src="assets/BurgerApp.png"
+                alt="screengrab of Burger App assignment"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                  <h6 class="card-title">Eat-Da-Burger</h6>
+                  <p>This is a description of the project.</p>
+              </div>
+            </div>
+
     </section>
 
     <script
