finished styling and indexv2

--- a/index.html
+++ b/index.html
@@ -267,11 +267,7 @@
                 <i class="fa fa-linkedin-square mr-4 fa-2x"> </i>
               </a>
               <!--Instagram-->
-              <a
-                class="ins-ic"
-                href="http://www.instagram.com/medszilla26"
-                target="blank"
-              >
+              <a class="ins-ic" href="#" target="blank">
                 <i class="fa fa-instagram mr-4 fa-2x"></i>
               </a>
             </div>
