--- a/indexv2.html
+++ b/indexv2.html
@@ -209,8 +209,70 @@
                 </form>
             </div>
         </div>
-
     </section>
+
+    <!-- Footer Section -->
+    <footer class="page-footer font-small blue-grey lighten-5">
+        <div style="background-color: #6aa9a3;">
+        <div class="container">
+            <div class="row py-4 d-flex align-items-center">
+                <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+                    <h5>Follow or find me here!</h5>
+                </div>
+                <div class="col-md-6 col-lg-7 text-center text-md-right">
+                    <!-- GitHub Info -->
+                    <a 
+                    class="gh-ic"
+                    href="https://github.com/medszilla26"
+                    target="blank"
+                    >
+                    <i class="fa fa-github-square mr-4 fa-2x"></i>
+                    </a>
+                    <!-- LinkedIn Info -->
+                    <a 
+                    class="li-ic"
+                    href="https://www.linkedin.com/in/pablohdzjr"
+                    target="blank"
+                    >
+                    <i class="fa fa-linkedin-square mr-4 fa-2x"></i>
+                    </a>
+                    <!-- Instagram Info -->
+                    <a 
+                    class="ins-ic"
+                    href="http://www.instagram.com/medszilla26"
+                    target="blank"
+                    >
+                    <i class="fa fa-instagram mr-4 fa-2x"></i>
+                    </a>
+                </div>
+                </div>
+            </div>
+        </div>
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left mt-5">
+        <div class="row mt-3 dark-grey-text">
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                <h6 class="text-uppercase font-weight-bold">reach me</h6>
+                <hr 
+                    class="accent-3 mb-4 mt-0 d-inline-block mx-auto"
+                    style="width: 60px;"
+                    />
+                    <!-- Email Address -->
+                    <p>
+                        <a class="mailto" href="mailto:pablohdzjr@gmail.com">
+                            <i class="fa fa-envelope mr-3"></i>pablohdzjr@gmail.com
+                        </a>
+                    </p>
+                    <!-- Phone Number -->
+                    <p>
+                        <a class="tel" href="tel:832-904-1663">
+                            <i class="fa fa-phone mr-3"></i>(832) 904-1663
+                        </a>
+                    </p>
+            </div>
+        </div>
+    </div>
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
