added readme generator project

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                       <img src="assets/BrewFinder.png" alt="screengrab of Brewery Finder group project" class="card-img-top"/>
                   </div>
                   <div class="card-body">
-                      <p>This is a description of the assignment.</p>
+                      <p>This is a description of the group project.</p>
                   </div>
                 <div class="card-footer bg-white">
                     <a href="https://brandonejenkins.github.io/Beer-Finder/" class="btn btn-sm btn-secondary" target="blank">Live Site</a>  
@@ -152,6 +152,26 @@
                 </div>
               </div>     
             </div>
+
+            <div class="col-md-6 col-lg-4">
+              <div class="card border-0 shadow p-1">
+                  <div class="media-body">
+                      <h4 class="card-title">Good Read Me Generator</h4>
+                  </div>
+                  <div class="card-media">
+                      <img src="assets/ReadMeGen.png" alt="screengrab of Good Read Me Generator assignment" class="card-img-top"/>
+                  </div>
+                  <div class="card-body">
+                      <p>This is a description of the assignment.</p>
+                  </div>
+                <div class="card-footer bg-white">
+                    <a href="" class="btn btn-sm btn-secondary" target="blank">Live Site</a>  
+                    <a href="https://github.com/medszilla26/good-readme-generator" class="btn btn-sm btn-secondary" target="blank">GitHub</a>
+                </div>
+              </div>     
+            </div>
+
+
         </div>
     </section>
 
